styles/style.css
* {
  box-sizing: border-box;
}


body {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-family: 'Roboto', sans-serif;
  background: pink;
}

main {
  display:none;
}

.playButton {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  width: 100px;
  height: 50px;
  border: 1px solid black;
  cursor: default;
}

.winCondition {
  display: flex;
  align-items: center;
  justify-content: center;
}
.winOrLose {
  align-items: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translateX(-50%) translateY(-50%);
  z-index:1000;
  justify-content: center;
  width: 200px;
  height: 50px;
  border: 1px solid black;
  cursor: default;
  display: none;
  border: 2px solid white;
  background: black;
  color: white;
}

.bothGrids {
  width: 900px;
  height: 400px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.selectors {
  width: 900px;
  height: 100px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.shipz {
  padding-top: 10px;
  width: 400px;
  height: 40px;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

.shipCarrier {
  width: 100px;
  height: 20px;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  cursor: pointer;
  border-left: 1px solid black;
}

.boxCarrier {
  width: 20%;
  height: 100%;
  background: blue;
  border-top: 1px solid black;
  border-right: 1px solid black;
  border-bottom: 1px solid black;

}
.shipBattleShip {
  width: 80px;
  height: 20px;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  cursor: pointer;
  border-left: 1px solid black;
}

.boxBattleShip {
  width: 25%;
  height: 100%;
  background: orange;
  border-top: 1px solid black;
  border-right: 1px solid black;
  border-bottom: 1px solid black;
}

.shipSub {
  width: 60px;
  height: 20px;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  cursor: pointer;
  border-left: 1px solid black;
}

.boxSub {
  width: 33.3%;
  height: 100%;
  background: yellow;
  border-top: 1px solid black;
  border-right: 1px solid black;
  border-bottom: 1px solid black;
}
.shipCruiser {
  width: 60px;
  height: 20px;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  cursor: pointer;
  border-left: 1px solid black;
}

.boxCruiser {
  width: 33.3%;
  height: 100%;
  background: green;
  border-top: 1px solid black;
  border-right: 1px solid black;
  border-bottom: 1px solid black;
}
.shipDestroyer {
  width: 40px;
  height: 20px;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  cursor: pointer;
  border-bottom: 1px solid black;
  border-left: 1px solid black;
}

.boxDestroyer {
  width: 50%;
  height: 100%;
  border-top: 1px solid black;
  border-right: 1px solid black;
  background: purple;
}

.horizontal {
  width: 100px;
  height: 30px;
  display: flex;
  flex-direction: row;
  border: 1px solid black;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;

}
.vertical {
  width: 80px;
  height: 30px;
  display: flex;
  flex-direction: row;
  border: 1px solid black;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}


.grid {
  width: 400px;
  height: 400px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex-wrap: wrap;
  border-bottom: 1px solid black;
  border-left: 1px solid black;
}

.humanGrid {
  width: 400px;
  height: 400px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex-wrap: wrap;
  border-bottom: 1px solid black;
  border-left: 1px solid black;
}

.grid-item {
  width: 10%;
  height: 10%;
  /* border-radius: 1px;
  box-shadow: 0px 0px 0px 0.1px rgba(0,0,0,1); */
  border-top: 1px solid black;
  border-right: 1px solid black;
}

.grid-item-human {
  width: 10%;
  height: 10%;
  /* border-radius: 1px;
  box-shadow: 0px 0px 0px 0.1px rgba(0,0,0,1); */
  border-top: 1px solid black;
  border-right: 1px solid black;
}


.carrier {
  background: blue;
}
.battleShip {
  background: orange;
}
.cruiser {
  background: green;
}
.submarine {
  background: yellow;
}
.destroyer {
  background: purple;
}
.occupied {
}

.hit {
  background: red;
}

.miss {
  background: white;
}

.sunk {
  background: black;
}

